--- a/requirements.txt
+++ b/requirements.txt
@@ -34,13 +34,18 @@ deepeval==0.21.45
 Deprecated==1.2.14
 dill==0.3.8
 distro==1.9.0
+dnspython==2.6.1
 docker-pycreds==0.4.0
 docx2txt==0.8
+email_validator==2.1.1
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
+evaluate==0.4.2
 exceptiongroup==1.2.1
 execnet==2.1.1
 executing==2.0.1
 Faker==24.14.1
+fastapi==0.111.0
+fastapi-cli==0.0.4
 filelock==3.14.0
 flake8==7.0.0
 frozenlist==1.4.1
@@ -62,6 +67,7 @@ grpcio-status==1.62.2
 h11==0.14.0
 httpcore==1.0.5
 httplib2==0.22.0
+httptools==0.6.1
 httpx==0.27.0
 huggingface-hub==0.23.1
 idna==3.7
@@ -153,10 +159,13 @@ pytest-xdist==3.6.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-json-logger==2.0.7
+python-multipart==0.0.9
+pytrec_eval==0.5
 pytz==2024.1
 PyYAML==6.0.1
 pyzmq==26.0.3
 ragas==0.1.8
+rank-bm25==0.2.2
 referencing==0.35.1
 regex==2024.4.28
 replicate==0.26.0
@@ -168,8 +177,12 @@ rpds-py==0.18.1
 rsa==4.9
 ruff==0.4.5
 safetensors==0.4.3
+scikit-learn==1.5.0
+scipy==1.13.1
+sentence-transformers==3.0.1
 sentry-sdk==2.2.1
 setproctitle==1.3.3
+shellingham==1.5.4
 six==1.16.0
 smart-open==6.4.0
 smmap==5.0.1
@@ -180,12 +193,14 @@ spacy-loggers==1.0.5
 SQLAlchemy==2.0.30
 srsly==2.4.8
 stack-data==0.6.3
+starlette==0.37.2
 streamlit==1.35.0
 structlog==24.1.0
 sympy==1.12
 tabulate==0.9.0
 tenacity==8.3.0
 thinc==8.2.3
+threadpoolctl==3.5.0
 tiktoken==0.7.0
 tldextract==5.1.2
 tokenizers==0.15.2
@@ -198,19 +213,25 @@ tornado==6.4
 tqdm==4.66.4
 traitlets==5.14.3
 transformers==4.39.3
-typer==0.9.4
+typer==0.12.3
 typing-inspect==0.9.0
 typing_extensions==4.11.0
 tzdata==2024.1
+ujson==5.10.0
 unidiff==0.7.5
 uritemplate==4.1.1
 urllib3==2.2.1
 uv==0.1.45
+uvicorn==0.30.0
+uvloop==0.19.0
 wandb==0.17.0
 wasabi==1.1.2
+watchfiles==0.22.0
 wcwidth==0.2.13
 weasel==0.3.4
 weave==0.50.3
+-e git+https://github.com/ash0ts/snowflake-arctic-weave-demo.git@ff51f81382a7e12c2f8b5816b49f935f736aea26#egg=weave_example_demo
+websockets==12.0
 Werkzeug==3.0.3
 wrapt==1.16.0
 xxhash==3.4.1
